knobs and dropdowns

--- a/bfxr2_simple/index.html
+++ b/bfxr2_simple/index.html
@@ -3,9 +3,11 @@
         <meta charset="UTF-8">
 
         <script src="js/third_party/bootstrap-slider.js"></script>
+        <script src="js/third_party/input-knobs.js"></script>
         <script src="js/synths/SynthTemplate.js"></script>
         <script src="js/synths/Bfxr.js"></script>
         <script src="js/synths/Footsteppr.js"></script>
+        <script src="js/synths/Transfxr.js"></script>
         <script src="js/tab.js"></script>
         <script src="js/guifxr.js"></script>
         <script src="js/index.js"></script>
