--- a/bfxr2_simple/index.html
+++ b/bfxr2_simple/index.html
@@ -2,15 +2,17 @@
     <head>
         <meta charset="UTF-8">
 
+        <script src="js/globals.js"></script>
         <script src="js/third_party/bootstrap-slider.js"></script>
         <script src="js/third_party/input-knobs.js"></script>
         <script src="js/synths/SynthTemplate.js"></script>
         <script src="js/synths/Bfxr.js"></script>
         <script src="js/synths/Footsteppr.js"></script>
         <script src="js/synths/Transfxr.js"></script>
-        <script src="js/tab.js"></script>
+        <script src="js/Tab.js"></script>
         <script src="js/guifxr.js"></script>
         <script src="js/index.js"></script>
+        
         <link rel="stylesheet" href="css/third_party/bootstrap-tooltip.css">
         <link rel="stylesheet" href="css/third_party/bootstrap-slider.css">
         <link rel="stylesheet" href="css/slider.css">
