--- a/bfxr2_simple/template.html
+++ b/bfxr2_simple/template.html
@@ -9,7 +9,7 @@
         <script src="js/synths/Bfxr.js"></script>
         <script src="js/synths/Footsteppr.js"></script>
         <script src="js/synths/Transfxr.js"></script>
-        <script src="js/tab.js"></script>
+        <script src="js/Tab.js"></script>
         <script src="js/guifxr.js"></script>
         <script src="js/index.js"></script>
         <script src="js/guifxrtemplate.js"></script>
