work on serialization

--- a/bfxr2_simple/index.html
+++ b/bfxr2_simple/index.html
@@ -3,6 +3,7 @@
         <meta charset="UTF-8">
 
         <script src="js/globals.js"></script>
+        <script src="js/saveload.js"></script>
         <script src="js/third_party/bootstrap-slider.js"></script>
         <script src="js/third_party/input-knobs.js"></script>
         <script src="js/synths/SynthTemplate.js"></script>
@@ -10,6 +11,7 @@
         <script src="js/synths/Footsteppr.js"></script>
         <script src="js/synths/Transfxr.js"></script>
         <script src="js/Tab.js"></script>
+        <script src="js/copypasteload.js"></script>
         <script src="js/guifxr.js"></script>
         <script src="js/index.js"></script>
         
