--- a/bfxr2_simple/index.html
+++ b/bfxr2_simple/index.html
@@ -4,12 +4,24 @@
 
         <script src="js/globals.js"></script>
         <script src="js/saveload.js"></script>
+
         <script src="js/third_party/bootstrap-slider.js"></script>
         <script src="js/third_party/input-knobs.js"></script>
+
+                
+        <script src="js/audio/riffwave.js"></script>
+        <script src="js/audio/audio_globals.js"></script>
+        <script src="js/audio/soundeffect.js"></script>
+        <script src="js/audio/puredata.js"></script>
+        <script src="js/audio/puredata_modules.js"></script>
+        <script src="js/audio/puredata_parser.js"></script>
+
+
         <script src="js/synths/SynthTemplate.js"></script>
         <script src="js/synths/Bfxr.js"></script>
         <script src="js/synths/Footsteppr.js"></script>
         <script src="js/synths/Transfxr.js"></script>
+
         <script src="js/Tab.js"></script>
         <script src="js/copypasteload.js"></script>
         <script src="js/guifxr.js"></script>
