bereit das alte projekt zu löschen ich glaube

--- a/bfxr2_simple/index.html
+++ b/bfxr2_simple/index.html
@@ -24,7 +24,7 @@
         <script src="js/synths/Transfxr.js"></script>
 
         <script src="js/Tab.js"></script>
-        <script src="js/copypasteload.js"></script>
+        <script src="js/StateSerialization.js"></script>
         <script src="js/guifxr.js"></script>
         <script src="js/index.js"></script>
         
