--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
 
+        <title>Bfxr.  Make sound effects for your games.</title>
+        <meta name="description" content="Bfxr is a simple tool for creating unique sound effects for games.">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!--SCRIPT_INCLUDES_START-->
         <script src="js/globals.js"></script>
         <script src="js/saveload.js"></script>
 
@@ -27,11 +33,14 @@
         <script src="js/StateSerialization.js"></script>
         <script src="js/guifxr.js"></script>
         <script src="js/index.js"></script>
+        <!--SCRIPT_INCLUDES_END-->
         
+        <!--CSS_INCLUDES_START-->
         <link rel="stylesheet" href="css/third_party/bootstrap-tooltip.css">
         <link rel="stylesheet" href="css/third_party/bootstrap-slider.css">
         <link rel="stylesheet" href="css/slider.css">
         <link rel="stylesheet" href="css/index.css">
+        <!--CSS_INCLUDES_END-->
     </head>
     <body>
         <div id="main_container">
