--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <!--SCRIPT_INCLUDES_START-->
         <script src="js/globals.js"></script>
-        <script src="js/saveload.js"></script>
+        <script src="js/SaveLoad.js"></script>
 
         <script src="js/third_party/bootstrap-slider.js"></script>
         <script src="js/third_party/input-knobs.js"></script>
