--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" type="image/png" href="favicon.png">
+        
         <title>Bfxr.  Make sound effects for your games.</title>
         <meta name="description" content="Bfxr is a simple tool for creating unique sound effects for games.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
