--- a/index.html
+++ b/index.html
@@ -53,5 +53,13 @@
                 by <a href="http://www.increpare.com">increpare</a> · <a href="https://github.com/sponsors/increpare">sponsor</a> · <a href="https://paypal.me/increparegames">paypal</a> · <a href="https://github.com/increpare/bfxr2">source code</a>
             </div>
         </div>
+        <dialog id="about-dialog">
+            <h2>About Bfxr</h2>
+            <p>Make sound effects for your games!</p>
+            <p>Bfxr is an open-source tool based on <A href="https://drpetter.se/">drpetter's</a> <a href="https://www.drpetter.se/project_sfxr.html">sfxr</a>, written by <a href="https://increpare.com/">your friendly neighbourhood increpare</a>.</p>
+            <p>Footsteppr is a port of <a href="https://obiwannabe.co.uk/">obiwannabe's</a> <a href="https://gist.github.com/increpare/dc5d54d7484211b259de9ef9fb0d140c">footstep generator</a>, originally written in puredata.</p>
+            <p>You can find out much more about where bfxr came from <a href="https://github.com/increpare/bfxr2?tab=readme-ov-file#archaeology">here</a>.</p>
+            <button autofocus onclick="document.getElementById('about-dialog').close()">Cool!</button>
+          </dialog>
     </body>
 </html>
