stop graph from having holes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div id="tab_page_manager">
             </div>
             <div id="footer">
-                by <a href="http://www.increpare.com">increpare</a> · <a href="https://github.com/sponsors/increpare">sponsor</a> · <a href="https://paypal.me/increparegames">paypal</a> · <a href="https://github.com/increpare/bfxr2">source code</a>
+                <a href="http://www.increpare.com">increpare</a> · <a href="https://github.com/sponsors/increpare">sponsor</a> · <a href="https://paypal.me/increparegames">paypal</a> · <a href="https://github.com/increpare/bfxr2">source code</a>
             </div>
         </div>
         <dialog id="about-dialog">
