--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <script src="js/audio/PinkNumber.js"></script>
         <script src="js/audio/Bfxr_DSP.js"></script>
         
-        <script src="js/synths/SynthTemplate.js"></script>
+        <script src="js/synths/SynthBase.js"></script>
         <script src="js/synths/Bfxr.js"></script>
         <script src="js/synths/Footsteppr.js"></script>
         <script src="js/synths/Transfxr.js"></script>
