--- a/index.html
+++ b/index.html
@@ -54,12 +54,39 @@
             </div>
         </div>
         <dialog id="about-dialog">
-            <h2>About Bfxr</h2>
-            <p>Make sound effects for your games!</p>
-            <p>Bfxr is an open-source tool based on <A href="https://drpetter.se/">drpetter's</a> <a href="https://www.drpetter.se/project_sfxr.html">sfxr</a>, written by <a href="https://increpare.com/">your friendly neighbourhood increpare</a>.</p>
-            <p>Footsteppr is a port of <a href="https://obiwannabe.co.uk/">obiwannabe's</a> <a href="https://gist.github.com/increpare/dc5d54d7484211b259de9ef9fb0d140c">footstep generator</a>, originally written in puredata.</p>
-            <p>You can find out much more about where bfxr came from <a href="https://github.com/increpare/bfxr2?tab=readme-ov-file#archaeology">here</a>.</p>
-            <button autofocus onclick="document.getElementById('about-dialog').close()">Cool!</button>
-          </dialog>
+            <div class="dialog-tabs">
+                <button class="dialog-tab active" data-tab="about">About</button>
+                <button class="dialog-tab" data-tab="shortcuts">Shortcuts</button>
+            </div>
+            <div class="dialog-content">
+                <div id="about-tab" class="tab-content active">
+                    <h2>About Bfxr</h2>
+                    <p>Make sound effects for your games!</p>
+                    <p>Bfxr is an open-source tool based on <a href="https://drpetter.se/">drpetter's</a> <a href="https://www.drpetter.se/project_sfxr.html">sfxr</a>, written by <a href="https://increpare.com/">your friendly neighbourhood increpare</a>.</p>
+                    <p>Footsteppr is a port of <a href="https://obiwannabe.co.uk/">obiwannabe's</a> <a href="https://gist.github.com/increpare/dc5d54d7484211b259de9ef9fb0d140c">footstep generator</a>, originally written in puredata.</p>
+                    <p>You can find out much more about where bfxr came from <a href="https://github.com/increpare/bfxr2?tab=readme-ov-file#archaeology">here</a>.</p>
+                </div>
+                <div id="shortcuts-tab" class="tab-content">
+                    <h2>Keyboard Shortcuts</h2>
+                    <dl class="shortcuts-list">
+                        <dt>CTRL+E</dt>
+                        <dd>Export current sound as WAV file.</dd>
+                        <dt>CTRL+S</dt>
+                        <dd>Save current sound as .bfxr file</dd>                        
+                        <dt>CTRL+C</dt>
+                        <dd>Copy current sound</dd>
+                        <dt>CTRL+V</dt>
+                        <dd>Paste current sound</dd>
+                        <dt>L</dt>
+                        <dd>Lock/unlock all parameters</dd>
+                        <dt>R</dt>
+                        <dd>Randomize all parameters</dd>
+                        <dt>M</dt>
+                        <dd>Mutate current sound</dd>
+                    </dl>
+                </div>
+            </div>
+            <button autofocus onclick="document.getElementById('about-dialog').close()">Close</button>
+        </dialog>
     </body>
 </html>
