link targets, about box width

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 <div id="about-tab" class="tab-content active">
                     <h2>About Bfxr</h2>
                     <p>Make sound effects for your games!</p>
-                    <p>Bfxr is an open-source tool based on <a href="https://drpetter.se/">drpetter's</a> <a href="https://www.drpetter.se/project_sfxr.html">sfxr</a>, written by <a href="https://increpare.com/">your friendly neighbourhood increpare</a>.</p>
-                    <p>Footsteppr is a port of <a href="https://obiwannabe.co.uk/">obiwannabe's</a> <a href="https://gist.github.com/increpare/dc5d54d7484211b259de9ef9fb0d140c">footstep generator</a>, originally written in puredata.</p>
-                    <p>You can find out much more about where bfxr came from <a href="https://github.com/increpare/bfxr2?tab=readme-ov-file#archaeology">here</a>.</p>
+                    <p>Bfxr is an open-source tool based on <a href="https://drpetter.se/" target="_blank">drpetter's</a> <a href="https://www.drpetter.se/project_sfxr.html" target="_blank">sfxr</a>, written by <a href="https://increpare.com/" target="_blank">your friendly neighbourhood increpare</a>.</p>
+                    <p>Footsteppr is a port of <a href="https://obiwannabe.co.uk/" target="_blank">obiwannabe's</a> <a href="https://gist.github.com/increpare/dc5d54d7484211b259de9ef9fb0d140c" target="_blank">footstep generator</a>, originally written in puredata.</p>
+                    <p>You can find out much more about where bfxr came from <a href="https://github.com/increpare/bfxr2?tab=readme-ov-file#archaeology" target="_blank">here</a>.</p>
                 </div>
                 <div id="shortcuts-tab" class="tab-content">
                     <h2>Keyboard Shortcuts</h2>
