--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <script src="js/third_party/jszip.js"></script>
         <script src="js/audio/riffwave.js"></script>
         <script src="js/audio/audio_globals.js"></script>
+        <script src="js/audio/AKWF.js"></script>
         <script src="js/audio/RealizedSound.js"></script>
         <script src="js/audio/puredata.js"></script>
         <script src="js/audio/puredata_modules.js"></script>
