--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         
         <script src="js/third_party/jszip.js"></script>        
         <script src="js/audio/riffwave.js"></script>
-        
+
         <script src="js/audio/audio_globals.js"></script>
-        <script src="js/synths/prefabs.js"></script>
+        <script src="js/synths/templates.js"></script>
 
         <script src="js/audio/AKWF.js"></script>
         <script src="js/audio/RealizedSound.js"></script>
