implemented #37 with css overlay

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <!--CSS_INCLUDES_END-->
     </head>
     <body>
+        <div id="dropzone" class="dropzone">Drag file to load</div>
         <div id="main_container">
             <div id="tab_bar">
             </div>
