--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div id="tab_page_manager">
             </div>
             <div id="footer">
-                <a href="http://www.increpare.com">increpare</a> · <a href="https://github.com/sponsors/increpare">sponsor</a> · <a href="https://paypal.me/increparegames">paypal</a> · <a href="https://github.com/increpare/bfxr2">source code</a>
+                <a href="http://www.increpare.com">increpare</a> · <a href="https://github.com/sponsors/increpare">sponsor</a> · <a href="https://paypal.me/increparegames">paypal</a> · <a href="https://github.com/increpare/bfxr2">source code</a> · <a href="https://www.bfxr.net/v1">old flash version</a>
             </div>
         </div>
         <dialog id="about-dialog">
