--- a/bin/index.html
+++ b/bin/index.html
@@ -126,7 +126,7 @@ input[type=checkbox].input-switch:checked,input[type=radio].input-switch:checked
             <div id="tab_page_manager">
             </div>
             <div id="footer">
-                <a href="http://www.increpare.com">increpare</a> · <a href="https://github.com/sponsors/increpare">sponsor</a> · <a href="https://paypal.me/increparegames">paypal</a> · <a href="https://github.com/increpare/bfxr2">source code</a>
+                <a href="http://www.increpare.com">increpare</a> · <a href="https://github.com/sponsors/increpare">sponsor</a> · <a href="https://paypal.me/increparegames">paypal</a> · <a href="https://github.com/increpare/bfxr2">source code</a> · <a href="https://www.bfxr.net/v1">old flash version</a>
             </div>
         </div>
         <dialog id="about-dialog">
